poc concluida